Fix for box shadows being too light. Now they darken and use the mixin available.

--- a/css/jquery.richTooltip.less
+++ b/css/jquery.richTooltip.less
@@ -3,7 +3,6 @@
 [data-rel="tooltip"] + aside,
 .rich-tooltip-content
 {
-	@border: #cecece;
 	@border: #ececec; // @platinum
 	@background: #fff;
 
@@ -19,7 +18,8 @@
 	padding: 6px;
 
 	// box shadow
-	box-shadow: 3px 3px 5px 5px #f2f2f2;
+	// box-shadow: 3px 3px 5px 5px #f2f2f2;
+	.drop-shadow(0, 2px, 2px, 2px, 0.4);
 
 	// javascript applies:
 	// top
